...
    case sheet(CloseSheet)
}

public enum CloseSheetButton: String, Sendable, Equatable {
    case save = "Save"
    case saveACopyElsewhere = "Save a Copy Elsewhere…"
    case saveMineAsACopy = "Save Mine as a Copy…"
    case cancel = "Cancel"
    case dontSave = "Don't Save"
}

public struct CloseSheet: Sendable, Equatable {
    public var message: String
...
